Added top right menu with sound/vibration toggles and persistence saved to shared preferences. Moved two hard coded strings from main activity to resource file

--- a/android/Notify/app/src/main/res/values/strings.xml
+++ b/android/Notify/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Notify</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name_lower">notify</string>
+    <string name="menu_sound">Sound</string>
+    <string name="menu_vibration">Vibration</string>
+    <string name="settings_file">Settings</string>
+    <string name="your_token">YOUR TOKEN</string>
 </resources>
